--- a/Isen.DotNet.Web/Views/Shared/_Nav.cshtml
+++ b/Isen.DotNet.Web/Views/Shared/_Nav.cshtml
@@ -49,6 +49,21 @@
                         role="button"
                         aria-haspopup="true"
                         aria-expanded="false">
+                        Adresses
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a asp-controller="Adresse" asp-action="Index">Toutes...</a></li>
+                        <li><a asp-controller="Adresse" asp-action="Detail">Ajouter...</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" 
+                        class="dropdown-toggle"
+                        data-toggle="dropdown"
+                        role="button"
+                        aria-haspopup="true"
+                        aria-expanded="false">
                         Communes
                         <span class="caret"></span>
                     </a>
