--- a/Isen.DotNet.Web/Views/Shared/_Nav.cshtml
+++ b/Isen.DotNet.Web/Views/Shared/_Nav.cshtml
@@ -80,12 +80,12 @@
                         role="button"
                         aria-haspopup="true"
                         aria-expanded="false">
-                        PIT
+                        PointInteret
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a asp-controller="Pit" asp-action="Index">Toutes...</a></li>
-                        <li><a asp-controller="Pit" asp-action="Detail">Ajouter...</a></li>
+                        <li><a asp-controller="PointInteret" asp-action="Index">Toutes...</a></li>
+                        <li><a asp-controller="PointInteret" asp-action="Detail">Ajouter...</a></li>
                     </ul>
                 </li>
                 <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
