--- a/Isen.DotNet.Web/Views/Adresse/Detail.cshtml
+++ b/Isen.DotNet.Web/Views/Adresse/Detail.cshtml
@@ -1,4 +1,5 @@
 @using Isen.DotNet.Library.Models.Implementation;
+@using Isen.DotNet.Web.Models;
 @{
     ViewData["Title"] = "Adresse (détail)";
 }
@@ -14,10 +15,15 @@
         <form class="form-horizontal" asp-action="Detail">
             <input type="hidden" value="@Model?.Id" asp-for="Id" />
             <div>
-                <label for="Nom" class="control-label">Nom de la adresse :</label>
+                <label for="Texte" class="control-label">Adresse :</label>
                 <input type="text" class="form-control"
-                    id="Nom" placeholder="Nom de la adresse"
-                    value="@Model?.Nom" asp-for="Nom" />
+                    id="Texte" placeholder="Adresse"
+                    value="@Model?.Texte" asp-for="Texte" />
+                <label for="Commune" class="control-label">Commune :</label>
+                <select type="text" class="form-control"
+                    id="Commune" placeholder="Commune"
+                    value="@Model?.Commune" asp-for="Commune" asp-items="CommuneView.Communes">
+                </select>
             </div>
             <br />
             <input type="submit" class="btn btn-primary" value="Valider" />
