Listes fermées pour la POI (en cours)

--- a/Isen.DotNet.Web/Views/Commune/Index.cshtml
+++ b/Isen.DotNet.Web/Views/Commune/Index.cshtml
@@ -29,7 +29,7 @@
             {
             <tr>
                 <td>@commune.Id</td>
-                <td>@commune.Name</td>
+                <td>@commune.Nom</td>
                 <td>@commune.Longitude</td>
                 <td>@commune.Latitude</td>
                 <td>
