--- a/Isen.DotNet.Web/Views/PointInteret/Index.cshtml
+++ b/Isen.DotNet.Web/Views/PointInteret/Index.cshtml
@@ -6,12 +6,12 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h1>Points Intérêts Touristiques <small>/city/index</small></h1>
+        <h1>Points Intérêts Touristiques <small>/poi/index</small></h1>
     </div>
 </div>
 <div class="row">
     <a class="btn btn-default" 
-        asp-controller="PointInteret" asp-action="Detail">Ajouter un poi...</a>
+        asp-controller="PointInteret" asp-action="Detail">Ajouter un point d'intérêt...</a>
 </div>
 <div class="row">
     <table class="table table-striped">
@@ -20,6 +20,7 @@
                 <th>#</th>
                 <th>Nom</th>
                 <th>Descriptif</th>
+                <th>Adresse</th>
                 <th>Categorie</th>
             </tr>
         </thead>
@@ -30,6 +31,7 @@
                 <td>@poi.Id</td>
                 <td>@poi.Nom</td>
                 <td>@poi.Descriptif</td>
+                <td>@poi.Adresse?.Texte</td>
                 <td>@poi.Categorie?.Nom</td> 
                 <td>
                     <a class="btn btn-default" asp-controller="PointInteret" asp-action="Detail" asp-route-id="@poi.Id">Editer</a>
