Affichage du Nom POI

--- a/Isen.DotNet.Web/Views/PointInteret/Detail.cshtml
+++ b/Isen.DotNet.Web/Views/PointInteret/Detail.cshtml
@@ -18,7 +18,7 @@
                 <label for="Name" class="control-label">Nom d'un point d'intérêts :</label>
                 <input type="text" class="form-control"
                     id="Name" placeholder="Définissez un nom"
-                    value="@Model?.Nom" asp-for="Nom" />
+                    value="@Model?.Name" asp-for="Name" />
             </div>
 
             <div>
