--- a/Isen.DotNet.Web/Views/PointInteret/Index.cshtml
+++ b/Isen.DotNet.Web/Views/PointInteret/Index.cshtml
@@ -29,7 +29,7 @@
             {
             <tr>
                 <td>@poi.Id</td>
-                <td>@poi.Nom</td>
+                <td>@poi.Name</td>
                 <td>@poi.Descriptif</td>
                 <td>@poi.Adresse?.Texte</td>
                 <td>@poi.Categorie?.Nom</td> 
