--- a/Isen.DotNet.Web/Views/Shared/_Footer.cshtml
+++ b/Isen.DotNet.Web/Views/Shared/_Footer.cshtml
@@ -1,4 +1,11 @@
 <hr />
-<footer>
+<style>
+    #footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+}
+</style>
+<footer id="footer">
     <p>&copy; 2018 - Yncrea - Ouillon/Tabard</p>
 </footer>
