--- a/Isen.DotNet.Web/Views/Shared/_Nav.cshtml
+++ b/Isen.DotNet.Web/Views/Shared/_Nav.cshtml
@@ -72,6 +72,20 @@
                         <li><a asp-controller="PointInteret" asp-action="Detail">Ajouter...</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a href="#" 
+                        class="dropdown-toggle"
+                        data-toggle="dropdown"
+                        role="button"
+                        aria-haspopup="true"
+                        aria-expanded="false">
+                        Map
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a asp-controller="Map" asp-action="Index">Affichage</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
