--- a/Isen.DotNet.Web/Views/Shared/_Layout.cshtml
+++ b/Isen.DotNet.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] | @ViewData["Desc"] - myWebApp</title>
+    <title>@ViewData["Title"] | @ViewData["Desc"] - Bucket Tourism</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
