--- a/Isen.DotNet.Web/Views/Map/Index.cshtml
+++ b/Isen.DotNet.Web/Views/Map/Index.cshtml
@@ -19,6 +19,10 @@
                         <p id="card-content">
                             Cliquez sur un marqueur pour obtenir des informations
                         </p>
+                        <p>
+                            <i id="card-adresse">
+                            </i>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -26,15 +30,14 @@
     </div>
 </div>
 <script>
-    function updateCard(texte, long, lat, description){
+    function updateCard(texte, long, lat, description, adresse, zipcode, commune){
         document.querySelector("#card-title").innerHTML = texte;
-        pos = "";
-        pos += "Longitude: "+long+" Latitude: "+lat;
         document.querySelector("#card-content").innerHTML = description;
+        document.querySelector("#card-adresse").innerHTML = adresse+", "+zipcode+" "+commune;
         console.log("Marker clicked!");
     }
 
-    function addMarker(map, texte, lat, long, description){
+    function addMarker(map, texte, lat, long, description, adresse, zipcode, commune){
         console.log("Adding marker ("+long+","+lat+")");
         console.log(texte);
         let marker = new google.maps.Marker({
@@ -56,12 +59,12 @@
         marker.addListener('click', function() {
           map.setZoom(20);
           map.setCenter(marker.getPosition());
-          updateCard(texte, long, lat, description);
+          updateCard(texte, long, lat, description, adresse, zipcode, commune);
         });
     }
     function myMap() {
         var mapOptions = {
-            center: new google.maps.LatLng(43.743707,7.262745),
+            center: new google.maps.LatLng(43.1201056,5.9348037),
             zoom: 20,
             mapTypeId: google.maps.MapTypeId.ROADMAP
         }
@@ -74,7 +77,7 @@
                 lat = lat.replace(",",".");
                 long = '@(item.Adresse.Latitude)';
                 long = long.replace(",",".");
-                addMarker(map, '@(item.Nom)', parseFloat(lat), parseFloat(long), '@(item.Description)');
+                addMarker(map, '@(item.Nom)', parseFloat(lat), parseFloat(long), '@(item.Description)', '@(item.Adresse.Texte)', '@(item.Adresse.ZipCode)', '@(item.Adresse.Commune.Nom)');
             </text>
         }
     }
