--- a/Isen.DotNet.Web/Views/Home/Index.cshtml
+++ b/Isen.DotNet.Web/Views/Home/Index.cshtml
@@ -12,18 +12,7 @@
 <div class="row">
     <div class="col-md-12">
         <h1>Home <small>/home/index</small></h1>
-        <p>Ceci est le contenu de la vue Home, action Index</p>
+        <p>Bienvenue sur notre application gérant quelques points d'intérêts de la ville de Toulon</p>
+        <p>Pour consulter la carte interactive, cliquez sur <a href="http://localhost:5000/Map">la carte</a></p>
     </div>
-</div>
-<div class="row">
-    <div class="col-md-6 bg-info">1</div>
-    <div class="col-md-6 bg-info">2</div>
-</div>
-<div class="row">
-    @foreach(var url in urls)
-    {
-        <div class="col-md-4 bg-info">
-            <a href="@url">@url</a>
-        </div>
-    }
 </div>
